no funciona script en html

--- a/.vscode/ejercicioJS.html
+++ b/.vscode/ejercicioJS.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <h1>OMG! you will not believe me but ...</h1>
-<p id="excusa"> ""</p>
+<p id="excusa">""</p>
 <script>
-    document.getElementById("excusa").innerHTML =onload(); </script>
+    document.getElementById("excusa").innerHTML=onload()</script>
 
 </body>
 </html>
