falta variable script en html

--- a/.vscode/ejercicioJS.html
+++ b/.vscode/ejercicioJS.html
@@ -4,7 +4,7 @@
 
     </title>
     <link rel="stylesheet" href="ejercicioJS.css">
-    <script src="ejercicioJS.js"></script>
+    <script type="text/javascript" src="ejercicioJS.js"></script>
 </head>
 <body>
 <h1>OMG! you will not believe me but ...</h1>
