--- a/.vscode/ejercicioJS.html
+++ b/.vscode/ejercicioJS.html
@@ -4,13 +4,13 @@
 
     </title>
     <link rel="stylesheet" href="ejercicioJS.css">
-    <script type="text/javascript" src="ejercicioJS.js"></script>
 </head>
 <body>
 <h1>OMG! you will not believe me but ...</h1>
 <p id="excusa">""</p>
-<script>
+<script src="ejercicioJS.js"> 
+    var onload=(excuse1+espacio+excuse2+espacio+excuse3+espacio+excuse4);
     document.getElementById("excusa").innerHTML=onload()</script>
-
+    
 </body>
 </html>
