--- a/.vscode/ejercicioJS.html
+++ b/.vscode/ejercicioJS.html
@@ -4,13 +4,15 @@
 
     </title>
     <link rel="stylesheet" href="ejercicioJS.css">
+    <script src="ejercicioJS.js"></script>
 </head>
 <body>
 <h1>OMG! you will not believe me but ...</h1>
-<p id="excusa">""</p>
-<script src="ejercicioJS.js"> 
-    var onload=(excuse1+espacio+excuse2+espacio+excuse3+espacio+excuse4);
-    document.getElementById("excusa").innerHTML=onload()</script>
+<p id="cambiar">Este es el texto a reemplazar</p>
+<script>
+    var onload= (console.log(oracion));
+    document.getElementById("cambiar").innerHTML=onload</script>
+
     
 </body>
 </html>
