fin proyecto JS-1

--- a/.vscode/ejercicioJS.html
+++ b/.vscode/ejercicioJS.html
@@ -9,10 +9,10 @@
 <body>
 <h1>OMG! you will not believe me but ...</h1>
 <p id="cambiar">Este es el texto a reemplazar</p>
-<script>
-    var onload= (console.log(oracion));
-    document.getElementById("cambiar").innerHTML=onload</script>
+<div class="script">
+    <script>
+        document.getElementById("cambiar").textContent=onload()</script>
 
-    
+    </div>
 </body>
 </html>
