fin proyecto JS-1

--- a/.vscode/ejercicioJS.html
+++ b/.vscode/ejercicioJS.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <head>
     <title>
-
+        Random Excuse
     </title>
     <link rel="stylesheet" href="ejercicioJS.css">
     <script src="ejercicioJS.js"></script>
 </head>
 <body>
 <h1>OMG! you will not believe me but ...</h1>
-<p id="cambiar">Este es el texto a reemplazar</p>
+<p id="excuse">Este es el texto a reemplazar</p>
 <div class="script">
     <script>
-        document.getElementById("cambiar").textContent=onload()</script>
+        document.getElementById("excuse").textContent=onload()</script>
 
     </div>
 </body>
